force-app/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <label>Produit d&apos;opportunité</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produits d&apos;opportunités</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>