force-app/main/default/objects/Product__c/fields/Amount_Excl_taxes__c.field-meta.xml
<CustomField>
    <fullName>Amount_Excl_taxes__c</fullName>
    <label>Budget total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>