force-app/main/default/objects/Product__c/fields/BrandName__c.field-meta.xml
<CustomField>
    <fullName>BrandName__c</fullName>
    <label>Nom enseigne</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distribution Casino France</fullName>
            </value>
            <value>
                <fullName>Leader Price</fullName>
            </value>
            <value>
                <fullName>Franprix</fullName>
            </value>
            <value>
                <fullName>Monoprix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>