force-app/main/default/objects/Product__c/fields/Bundlecheckbox__c.field-meta.xml
<CustomField>
    <fullName>Bundlecheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utilisé pour calcul des remises</description>
    <label>Couplage ?</label>
    <type>Checkbox</type>
</CustomField>