force-app/main/default/objects/Product__c/fields/Capital__c.field-meta.xml
<CustomField>
    <fullName>Capital__c</fullName>
    <formula>CASE(BrandName__c,
&quot;Distribution Casino France&quot;, 106801329,
&quot;Leader Price&quot;, 4571440,
&quot;Franprix&quot;, 800000,
&quot;Monoprix&quot;, 61751696,
0)</formula>
    <label>Capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>