force-app/main/default/objects/Product__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Catégorie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activation MD</fullName>
            </value>
            <value>
                <fullName>Activation Online</fullName>
            </value>
            <value>
                <fullName>Adex</fullName>
            </value>
            <value>
                <fullName>Etude et mesure</fullName>
            </value>
            <value>
                <fullName>Frais techniques</fullName>
            </value>
            <value>
                <fullName>Régule</fullName>
            </value>
            <value>
                <fullName>Display Onsite</fullName>
            </value>
            <value>
                <fullName>Forfait Visuels</fullName>
            </value>
            <value>
                <fullName>Promogaming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>