force-app/main/default/objects/Product__c/fields/ContractProductName__c.field-meta.xml
<CustomField>
    <fullName>ContractProductName__c</fullName>
    <label>Nom produit contrat d&apos;application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>