force-app/main/default/objects/Product__c/fields/CustomDiscount__c.field-meta.xml
<CustomField>
    <fullName>CustomDiscount__c</fullName>
    <label>Remise appliquée</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>