force-app/main/default/objects/Product__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>IF( Offert__c = true, 1,

IF(

OR(
 AND(
  Bundlecheckbox__c = true,
  (INCLUDES( Type__c , &quot;Frais technique&quot;) || INCLUDES( Type__c , &quot;Frais technique push SMS&quot;))
 )
,
 AND(
  NOT(INCLUDES( Type__c , &quot;Frais technique&quot;)),
  NOT(INCLUDES( Type__c , &quot;Frais technique push SMS&quot;))
 )
), 
 0.85,
 NULL
))</formula>
    <label>Remise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>