force-app/main/default/objects/Product__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diptyque</fullName>
            </value>
            <value>
                <fullName>Quadriptyque</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Native</fullName>
            </value>
            <value>
                <fullName>Sponso</fullName>
                <isActive>false</isActive>
                <label>Sponso</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>