force-app/main/default/objects/Product__c/fields/FrameworkAgreement__c.field-meta.xml
<CustomField>
    <fullName>FrameworkAgreement__c</fullName>
    <label>N° accord-cadre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>