force-app/main/default/objects/Product__c/fields/GrossTotal__c.field-meta.xml
<CustomField>
    <fullName>GrossTotal__c</fullName>
    <formula>IF( Offert__c = true, 
(UnitPrice__c * Quantity__c / IF(TEXT( PricingModel__c ) == &quot;CPM&quot;, 1000,1) * 6.6666667),

IF(

OR(
 AND(
  Bundlecheckbox__c = true,
  (INCLUDES( Type__c , &quot;Frais technique&quot;) || INCLUDES( Type__c , &quot;Frais technique push SMS&quot;))
 )
,
 AND(
  NOT(INCLUDES( Type__c , &quot;Frais technique&quot;)),
  NOT(INCLUDES( Type__c , &quot;Frais technique push SMS&quot;))
 )
), 
 Total__c * 6.6666667,
 Total__c 
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix Brut € HT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>