force-app/main/default/objects/Product__c/fields/GrossTotalRegiePhysique__c.field-meta.xml
<CustomField>
    <fullName>GrossTotalRegiePhysique__c</fullName>
    <formula>IF(
INCLUDES( Type__c , &quot;Frais technique&quot;) || INCLUDES( Type__c , &quot;Frais technique push SMS&quot;),
UnitPrice__c ,
UnitPrice__c / (1 -  Opportunity__r.Discount__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prix Brut € HT (Régie Physique)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>