force-app/main/default/objects/Product__c/fields/GrossVolumeDiscount__c.field-meta.xml
<CustomField>
    <fullName>GrossVolumeDiscount__c</fullName>
    <label>Remise Brut €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>