force-app/main/default/objects/Product__c/fields/ioHideQuantity__c.field-meta.xml
<CustomField>
    <fullName>ioHideQuantity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OI: Masquer Volume</label>
    <type>Checkbox</type>
</CustomField>