force-app/main/default/objects/Product__c/fields/ioHideUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>ioHideUnitPrice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OI: Masquer Tarif Net</label>
    <type>Checkbox</type>
</CustomField>