force-app/main/default/objects/Product__c/fields/Medium__c.field-meta.xml
<CustomField>
    <fullName>Medium__c</fullName>
    <label>Support</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3WRelevanc</fullName>
            </value>
            <value>
                <fullName>AppNexus</fullName>
            </value>
            <value>
                <fullName>Après l&apos;achat</fullName>
            </value>
            <value>
                <fullName>Banque Casino</fullName>
            </value>
            <value>
                <fullName>Base test</fullName>
            </value>
            <value>
                <fullName>Bonial</fullName>
            </value>
            <value>
                <fullName>Cap Pépita</fullName>
            </value>
            <value>
                <fullName>Caradisiac group</fullName>
            </value>
            <value>
                <fullName>CarData</fullName>
            </value>
            <value>
                <fullName>Carla Bikini</fullName>
            </value>
            <value>
                <fullName>Casino Drive</fullName>
            </value>
            <value>
                <fullName>Casino group</fullName>
            </value>
            <value>
                <fullName>Casino HM</fullName>
            </value>
            <value>
                <fullName>Casino SM</fullName>
            </value>
            <value>
                <fullName>Cdiscount</fullName>
            </value>
            <value>
                <fullName>Cdiscount Pro</fullName>
            </value>
            <value>
                <fullName>Cdiscount Voyages</fullName>
            </value>
            <value>
                <fullName>Chefclub</fullName>
            </value>
            <value>
                <fullName>Conforama</fullName>
            </value>
            <value>
                <fullName>DBM</fullName>
            </value>
            <value>
                <fullName>Email Retargeting</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Fidall</fullName>
            </value>
            <value>
                <fullName>Franprix</fullName>
            </value>
            <value>
                <fullName>Géant</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Go Sport</fullName>
            </value>
            <value>
                <fullName>Kontiki Média</fullName>
            </value>
            <value>
                <fullName>Leader Price</fullName>
            </value>
            <value>
                <fullName>Lucky Cart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>