force-app/main/default/objects/Product__c/fields/Nb_de_coupons__c.field-meta.xml
<CustomField>
    <fullName>Nb_de_coupons__c</fullName>
    <description>Sert à calculer le prix total des Frais de gestion.</description>
    <inlineHelpText>Sert à calculer le prix total des Frais de gestion.</inlineHelpText>
    <label>Nb de coupons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>