force-app/main/default/objects/Product__c/fields/Number_of_POS__c.field-meta.xml
<CustomField>
    <fullName>Number_of_POS__c</fullName>
    <label>Nombre de PDV Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>