force-app/main/default/objects/Product__c/fields/Offert__c.field-meta.xml
<CustomField>
    <fullName>Offert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offert</label>
    <type>Checkbox</type>
</CustomField>