force-app/main/default/objects/Product__c/fields/OpportunityProductId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProductId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Id offre éligible</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>