force-app/main/default/objects/Product__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produits d&apos;opportunités</relationshipLabel>
    <relationshipName>OpportunityProducts</relationshipName>
    <type>Lookup</type>
</CustomField>