force-app/main/default/objects/Product__c/fields/Pourcentage_de_la_generosite__c.field-meta.xml
<CustomField>
    <fullName>Pourcentage_de_la_generosite__c</fullName>
    <description>Sert au calcul des frais de performance.</description>
    <inlineHelpText>Sert au calcul des frais de performance.</inlineHelpText>
    <label>% de la générosité</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>