force-app/main/default/objects/Product__c/fields/PricingModel__c.field-meta.xml
<CustomField>
    <fullName>PricingModel__c</fullName>
    <label>Mode de com</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_de_produit__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CPM</fullName>
            </value>
            <value>
                <fullName>Forfait</fullName>
                <default>true</default>
                <label>Forfait</label>
            </value>
            <value>
                <fullName>Prix unitaire</fullName>
            </value>
            <value>
                <fullName>Euros par coupon</fullName>
            </value>
            <value>
                <fullName>Montant</fullName>
            </value>
            <value>
                <fullName>% de la générosité</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>