force-app/main/default/objects/Product__c/fields/Rayon__c.field-meta.xml
<CustomField>
    <fullName>Rayon__c</fullName>
    <label>Rayon</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Univers__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessoires Mode et Bagages</fullName>
            </value>
            <value>
                <fullName>Aménagement extérieur</fullName>
            </value>
            <value>
                <fullName>Ampoules et Piles</fullName>
            </value>
            <value>
                <fullName>Animalerie</fullName>
            </value>
            <value>
                <fullName>Animalerie en vrac</fullName>
            </value>
            <value>
                <fullName>Apéritif, Entrée et Snacking</fullName>
            </value>
            <value>
                <fullName>Apéritifs</fullName>
            </value>
            <value>
                <fullName>Apéritifs et Chips</fullName>
            </value>
            <value>
                <fullName>Apéritifs et Digestifs</fullName>
            </value>
            <value>
                <fullName>Appareils reconditionnés</fullName>
            </value>
            <value>
                <fullName>Apprentissage</fullName>
            </value>
            <value>
                <fullName>Arts de la table et Ustensiles</fullName>
            </value>
            <value>
                <fullName>Aspirateur</fullName>
            </value>
            <value>
                <fullName>Auto et Moto</fullName>
            </value>
            <value>
                <fullName>Bagagerie</fullName>
            </value>
            <value>
                <fullName>Barbecue, Plancha et Charbon</fullName>
            </value>
            <value>
                <fullName>BD, Manga et Jeunesse</fullName>
            </value>
            <value>
                <fullName>Bébé</fullName>
            </value>
            <value>
                <fullName>Bières et Cidres</fullName>
            </value>
            <value>
                <fullName>Bijoux et Montre</fullName>
            </value>
            <value>
                <fullName>Biscuit et Confiserie</fullName>
            </value>
            <value>
                <fullName>Biscuits et Compotes</fullName>
            </value>
            <value>
                <fullName>Boisson Bio</fullName>
            </value>
            <value>
                <fullName>Boissons</fullName>
            </value>
            <value>
                <fullName>Boissons Bio</fullName>
            </value>
            <value>
                <fullName>Boucherie</fullName>
            </value>
            <value>
                <fullName>Bricolage</fullName>
            </value>
            <value>
                <fullName>Bûches de Noel</fullName>
            </value>
            <value>
                <fullName>Café et Filtres</fullName>
            </value>
            <value>
                <fullName>Café et Thé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>