force-app/main/default/objects/Product__c/fields/Requete__c.field-meta.xml
<CustomField>
    <fullName>Requete__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requête</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Produits d&apos;opportunités</relationshipLabel>
    <relationshipName>Produits_d_opportunites</relationshipName>
    <type>Lookup</type>
</CustomField>