force-app/main/default/objects/Product__c/fields/Signed_OI__c.field-meta.xml
<CustomField>
    <fullName>Signed_OI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signé ?</label>
    <type>Checkbox</type>
</CustomField>