force-app/main/default/objects/Product__c/fields/Targeting__c.field-meta.xml
<CustomField>
    <fullName>Targeting__c</fullName>
    <label>Ciblage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>data</fullName>
            </value>
            <value>
                <fullName>Jumeaux transactionnels</fullName>
            </value>
            <value>
                <fullName>personae</fullName>
            </value>
            <value>
                <fullName>rotation générale</fullName>
            </value>
            <value>
                <fullName>Aucun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>