force-app/main/default/objects/Product__c/fields/Tech_RecordTypeOpportunity__c.field-meta.xml
<CustomField>
    <fullName>Tech_RecordTypeOpportunity__c</fullName>
    <label>Type d&apos;opportunité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail Media OnSite</fullName>
            </value>
            <value>
                <fullName>Extension d’audience</fullName>
            </value>
            <value>
                <fullName>Promogaming</fullName>
            </value>
            <value>
                <fullName>Promotion Personnalisée</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>