force-app/main/default/objects/Product__c/fields/TechnicalFees__c.field-meta.xml
<CustomField>
    <fullName>TechnicalFees__c</fullName>
    <formula>IF(
OR(
INCLUDES(Type__c, &quot;Frais technique push SMS&quot;),
INCLUDES(Type__c, &quot;Frais technique&quot;)
),
true,
false
)</formula>
    <label>Frais techniques ?</label>
    <type>Checkbox</type>
</CustomField>