force-app/main/default/objects/Product__c/fields/TechnicalProductIds__c.field-meta.xml
<CustomField>
    <fullName>TechnicalProductIds__c</fullName>
    <label>Technical Product Ids</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>