force-app/main/default/objects/Product__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>IF(Offert__c = true, 0,


  IF ( TEXT( PricingModel__c ) == &quot;CPM&quot; , UnitPrice__c * Quantity__c /1000 * (1- CustomDiscount__c ), 
  
  IF ( OR(TEXT( PricingModel__c ) == &quot;Prix Unitaire&quot;, TEXT( PricingModel__c ) == &quot;Forfait&quot;), UnitPrice__c * Quantity__c  * (1- CustomDiscount__c ), 

  IF ( TEXT( PricingModel__c ) == &quot;Montant&quot; ,  Montant__c , 
  
  IF ( TEXT( PricingModel__c ) == &quot;% de la générosité&quot;,   Total_Frais_de_performance__c ,
 
  IF ( TEXT( PricingModel__c ) == &quot;Euros par coupon&quot; , UnitPrice__c * Nb_de_coupons__c * (1- CustomDiscount__c ) ,0

      ) 
      )
      )
      )
      )
      )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>