force-app/main/default/objects/Product__c/fields/Total_Frais_de_performance__c.field-meta.xml
<CustomField>
    <fullName>Total_Frais_de_performance__c</fullName>
    <description>Champ rempli dans le flow Ajout de produits d&apos;opportunité</description>
    <label>Total Frais de performance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>