force-app/main/default/objects/Product__c/fields/Trade_and_companies_register__c.field-meta.xml
<CustomField>
    <fullName>Trade_and_companies_register__c</fullName>
    <formula>CASE(BrandName__c,
&quot;Distribution Casino France&quot;, &quot;Saint-Etienne&quot;,
&quot;Leader Price&quot;, &quot;Melun&quot;,
&quot;Franprix&quot;, &quot;Créteil&quot;,
&quot;Monoprix&quot;, &quot;Nanterre&quot;,
&quot;&quot;)</formula>
    <label>RCS</label>
    <type>Text</type>
</CustomField>