force-app/main/default/objects/Product__c/fields/Trade_and_companies_register_number__c.field-meta.xml
<CustomField>
    <fullName>Trade_and_companies_register_number__c</fullName>
    <formula>CASE(BrandName__c,
&quot;Distribution Casino France&quot;, &quot;428 268 023&quot;,
&quot;Leader Price&quot;, &quot;384 846 432&quot;,
&quot;Franprix&quot;, &quot;414 265 165&quot;,
&quot;Monoprix&quot;, &quot;552 018 020&quot;,
&quot;&quot;)</formula>
    <label>Numéro RCS</label>
    <type>Text</type>
</CustomField>