force-app/main/default/objects/Product__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3W Retail media plateform</fullName>
            </value>
            <value>
                <fullName>Adresses postales</fullName>
            </value>
            <value>
                <fullName>Affichage chariot</fullName>
            </value>
            <value>
                <fullName>Analyse de mixités</fullName>
            </value>
            <value>
                <fullName>Bannière HP Premium 1600x200</fullName>
            </value>
            <value>
                <fullName>bannières multiformats</fullName>
            </value>
            <value>
                <fullName>Bannières order process</fullName>
            </value>
            <value>
                <fullName>Cache antenne</fullName>
            </value>
            <value>
                <fullName>Cash Back</fullName>
            </value>
            <value>
                <fullName>Clab</fullName>
            </value>
            <value>
                <fullName>Concurrence win/lost sur Cdiscount</fullName>
            </value>
            <value>
                <fullName>Echantillons</fullName>
            </value>
            <value>
                <fullName>emailing BtoB</fullName>
            </value>
            <value>
                <fullName>emailing BtoC</fullName>
            </value>
            <value>
                <fullName>Etude Ad hoc</fullName>
            </value>
            <value>
                <fullName>Etude lancement de produit</fullName>
            </value>
            <value>
                <fullName>Etude produit à maturité/en déclin</fullName>
            </value>
            <value>
                <fullName>Frais technique</fullName>
            </value>
            <value>
                <fullName>Frais technique push SMS</fullName>
            </value>
            <value>
                <fullName>Google adsense</fullName>
            </value>
            <value>
                <fullName>Google adx</fullName>
            </value>
            <value>
                <fullName>Google shopping</fullName>
            </value>
            <value>
                <fullName>Habillage de page</fullName>
            </value>
            <value>
                <fullName>Interstitiel</fullName>
            </value>
            <value>
                <fullName>Kakémono</fullName>
            </value>
            <value>
                <fullName>Leaflets</fullName>
            </value>
            <value>
                <fullName>Lien partenaire</fullName>
            </value>
            <value>
                <fullName>Lien sponso Google</fullName>
            </value>
            <value>
                <fullName>Loc data - SMS</fullName>
            </value>
            <value>
                <fullName>Locdata - emailing BtoC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>