force-app/main/default/objects/Product__c/fields/Type_de_produit__c.field-meta.xml
<CustomField>
    <fullName>Type_de_produit__c</fullName>
    <label>Type de produit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail_Media_OnSite</fullName>
                <label>Retail Media OnSite</label>
            </value>
            <value>
                <fullName>Frais_Graphiques</fullName>
                <label>Frais Graphiques</label>
            </value>
            <value>
                <fullName>Mesure</fullName>
            </value>
            <value>
                <fullName>Extension_Audience</fullName>
                <label>Extension d&apos;audience</label>
            </value>
            <value>
                <fullName>Promogaming Multimarques</fullName>
            </value>
            <value>
                <fullName>Promogaming Monomarque</fullName>
            </value>
            <value>
                <fullName>Frais de Gestion</fullName>
            </value>
            <value>
                <fullName>Generosite</fullName>
                <label>Générosité</label>
            </value>
            <value>
                <fullName>Frais_de_setup</fullName>
                <label>Frais de setup</label>
            </value>
            <value>
                <fullName>Frais_de_performance</fullName>
                <label>Frais de performance</label>
            </value>
            <value>
                <fullName>Frais_de_media</fullName>
                <label>Frais de média</label>
            </value>
            <value>
                <fullName>Search</fullName>
                <label>Search sponso</label>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>