force-app/main/default/objects/Product__c/fields/Type_of_company__c.field-meta.xml
<CustomField>
    <fullName>Type_of_company__c</fullName>
    <formula>CASE(BrandName__c,
&quot;Distribution Casino France&quot;, &quot;Société par action simplifiée&quot;,
&quot;Leader Price&quot;, &quot;SNC&quot;,
&quot;Franprix&quot;, &quot;Société par action simplifiée&quot;,
&quot;Monoprix&quot;, &quot;Société par action simplifiée&quot;,
&quot;&quot;)</formula>
    <label>Type de société</label>
    <type>Text</type>
</CustomField>