force-app/main/default/objects/Product__c/fields/Type_produit__c.field-meta.xml
<CustomField>
    <fullName>Type_produit__c</fullName>
    <formula>TEXT( Package__r.Type_de_produit__c)</formula>
    <label>Type produit</label>
    <type>Text</type>
</CustomField>